--- a/services.html
+++ b/services.html
@@ -370,20 +370,20 @@ Purchase:
                         <div class="owl-carousel owl-theme">
                             <div class="item">
                                 <div class="abt_img">
-                                    <img src="images\img2.jpg" alt="img" class="img-responsive">
+                                    <img src="images\img2.jpg" width="600px" alt="img" class="img-responsive">
                                     <h1>Spray Sanitization </h1>
                                 </div>
 
                             </div>
                             <div class="item">
                                 <div class="abt_img">
-                                    <img src="images\img3.jpg" alt="img" class="img-responsive">
+                                    <img src="images\img3.jpg" width="600px" alt="img" class="img-responsive">
                                     <h1>Lift cleaning </h1>
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="abt_img">
-                                    <img src="images\img4.jpg" alt="img" class="img-responsive">
+                                    <img src="images\img4.jpg" width="600px" alt="img" class="img-responsive">
                                     <h1>Dranage hole cleaning </h1>
                                 </div>
                             </div>
