--- a/appt_new.html
+++ b/appt_new.html
@@ -331,19 +331,8 @@ button:hover {
 		   <input type="tel" id="phone" name="phone" pattern="[789][0-9]{9}"  placeholder="Phone" required>
 		  <label for="service">Select services</label>
                   <select id="service" name="service" form="apptform">
-                    <option disabled="disabled" selected="selected">--Choose option</option>
-            														<option value>Plant Insect Control</option>
-            														<option value>Rodent Removal</option>
-            														<option value>Lizard Control</option>
-            														<option value>Bedbug Control</option>
-            														<option value>Mosquito Control</option>
-            														<option value>Coackroach Control</option>
-            														<option value>Snake Control</option>
-            														<option value>Termite Control</option>
-            														<option value>Spider Control</option>
-                  </select>
-                 
-                
+               <label for="service" >Select services</label>
+                  <input type="text" id="service" name="service" placeholder="Enter pest control service ..">
                    <label for="address">Address</label>
                   <textarea id="address" name="address" placeholder="Your address.." style="height:170px" required></textarea>
                   <label>Book a Date : </label>
@@ -669,7 +658,7 @@ button:hover {
             <div class="row">
                 <div class="col-lg-10 col-md-10 col-xs-10 col-sm-10">
                     <div class="section3_copyright">
-                        <p>Copyright 2018 <a href="index.html">  HyTech Pest Control </a>. all right reserved - design by <a href="index.html">webstrot</a></p>
+                        <p>Copyright 2018 <a href="index.html">  HyTech Pest Control </a>. all right reserved - design by <a href="index.html">KodeIt Solution</a></p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-2 col-xs-2 col-sm-2">
