--- a/appt_new.html
+++ b/appt_new.html
@@ -329,9 +329,8 @@ button:hover {
                   <input type="email" id="email" name="email" placeholder="Your email.." required>
                   <label for="phone">Mobile no.</label>
 		   <input type="tel" id="phone" name="phone" pattern="[789][0-9]{9}"  placeholder="Phone" required>
-		  <label for="service">Select services</label>
-                  <select id="service" name="service" form="apptform">
-               <label for="service" >Select services</label>
+		  <label for="service">Enter pest service</label>
+
                   <input type="text" id="service" name="service" placeholder="Enter pest control service ..">
                    <label for="address">Address</label>
                   <textarea id="address" name="address" placeholder="Your address.." style="height:170px" required></textarea>
