--- a/appt_new.html
+++ b/appt_new.html
@@ -596,6 +596,8 @@ button:hover {
                               
                                 <li><a href="contact_us.html"><i class="fa fa-circle"></i>Contact Us</a>
                                 </li>
+				    <li><a href="appt_new.html"><i class="fa fa-circle"></i>Appointment</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -627,23 +629,23 @@ button:hover {
                         <div class="wrapper_second_useful wrapper_second_useful_2">
                             <h4>services</h4>
                             <ul>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Plant Insect Control</a>
+                               <li><a href="plant_insect_control.html"><i class="fa fa-circle"></i>Plant Insect Control</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Rodent Removal</a>
+                                <li><a href="rodent_removal.html"><i class="fa fa-circle"></i>Rodent Removal</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Lizard Control</a>
+                                <li><a href="lizard_control.html"><i class="fa fa-circle"></i>Lizard Control</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Bedbug Control</a>
+                                <li><a href="bedbug_control.html"><i class="fa fa-circle"></i>Bedbug Control</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Mosquito Control</a>
+                                <li><a href="mosquito_control.html"><i class="fa fa-circle"></i>Mosquito Control</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Coackroach Control</a>
+                                <li><a href="coackroach_control.html"><i class="fa fa-circle"></i>Coackroach Control</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Snake Control</a>
+                                <li><a href="snake_control.html"><i class="fa fa-circle"></i>Snake Control</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Spider Control</a>
+                                <li><a href="spider_control.html"><i class="fa fa-circle"></i>Spider Control</a>
                                 </li>
-                                <li><a href="services.html"><i class="fa fa-circle"></i>Termite Control</a>
+                                <li><a href="termite_control.html"><i class="fa fa-circle"></i>Termite Control</a>
                                 </li>
                             </ul>
                         </div>
