--- a/bedbug_control.html
+++ b/bedbug_control.html
@@ -424,7 +424,7 @@ button:hover {
                     </div>
                 </div>
 		    <form id="QueryForm" action="https://formsubmit.io/send/b13c7f50-7c75-44d9-881b-4a01e3759ac9" method="POST">
-    <input name="_redirect" type="hidden" id="name" value="https://kodeitsolution.github.io/hytech/about_us_new.html">
+    <input name="_redirect" type="hidden" id="name" value="https://kodeitsolution.github.io/hytech/bedbug_control.html">
                     <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                          <!--<div class="wrapper_email_button pst_toppadder10">-->
             
@@ -543,6 +543,8 @@ button:hover {
                                 <li><a href="blog_new.html"><i class="fa fa-circle"></i>Blog</a>-->
                                 </li>
                                 <li><a href="contact_us.html"><i class="fa fa-circle"></i>Contact Us</a>
+                                </li>
+				  <li><a href="appointment.html"><i class="fa fa-circle"></i>Appointment</a>
                                 </li>
                             </ul>
                         </div>
