--- a/plant_insect_control.html
+++ b/plant_insect_control.html
@@ -14,7 +14,37 @@ Purchase:
 
 <head>
     <style type="text/css">
-	    
+	 input[type=text], select, textarea {
+  width: 90%; /* Full width */
+  height:10%;
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius:0%; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 20px; /* Add a top margin */
+  margin-bottom: 30px; /* Bottom margin */
+  resize:none; /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+button {
+    width:150px;
+    height:50px;
+  background-color: #ecc204;
+  color: black;
+  padding: 12px 20px;
+  border-color:black;
+  border-radius:0%;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+button:hover {
+  background-color:  black;
+  color:#ecc204;
+  border-color:#ecc204;
+
+}    
         .start_journey {
             padding-top: 25px;
         }
