--- a/services.html
+++ b/services.html
@@ -861,6 +861,8 @@ button:hover {
                                 </li>
                                 <li><a href="contact_us.html"><i class="fa fa-circle"></i>Contact Us</a>
                                 </li>
+				 <li><a href="appt_new.html"><i class="fa fa-circle"></i>Appointment</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
