--- a/appt_new.html
+++ b/appt_new.html
@@ -482,7 +482,7 @@ button:hover {
                                  <p> <textarea id="subject" name="subject" placeholder="Enter your Query" style="height:90px"></textarea></p>
                                <div class="response"></div>
                                     <div class="cntct_2_btn_wrapper">
-                                        <button onclick="myFunction()" type="button" class="btn cntct_btn submitForm" type="contact">Send</button>
+                                        <button onclick="myFunction()" type="button" class="btn cntct_btn submitForm" type="contact" style="color:mintcream;">Send</button>
                                     </div>
                                  <!-- <button onclick="myFunction()" button type="submit" value="Submit">Send</button>-->
                                   
