--- a/appt_new.html
+++ b/appt_new.html
@@ -310,7 +310,7 @@ button:hover {
 
 
 	<!-- message section start -->
-    <div class="sp_fm_contact_section">
+    <div id="choose" class="sp_choose_main_wrapper" style="background-image: url(images/bg2.jpg);">
         <div class="container">
             <div style="text-align:center">
 		    <h1><b>Appointment</b></h1>
@@ -318,7 +318,7 @@ button:hover {
             </div>
             <div class="row">
               <div class="column">
-                <img src="images\img5.jpg" style="width:95%">
+                <img src="images\appointment.jpg" style="width:95%">
               </div>
               <div class="column" >
                <form id="apptform" action="https://formsubmit.io/send/b13c7f50-7c75-44d9-881b-4a01e3759ac9" method="POST">
