--- a/bedbug_control.html
+++ b/bedbug_control.html
@@ -392,7 +392,7 @@ button:hover {
                 <div class="abt_page_img_rght_wrapper">
                 <div class="pc_abt_img_wrapper">
                      <p class="types">Types of Bed Bugs</p>
-                            <img src="images\common_bedbug.jpg" alt="img" class="img1">
+                            <img src="images\cbb.jpg" alt="img" class="img1">
                             <div class="img1-para">Common Bed Bugs</div>
                     
                            <img src="images\tropical_bb.jpg" alt="img" class="img2">
