--- a/snake_control.html
+++ b/snake_control.html
@@ -419,7 +419,7 @@ button:hover {
                 <div class="abt_page_img_rght_wrapper">
                 <div class="pc_abt_img_wrapper">
                      <p class="types">Types of Snakes</p>
-                            <img src="images\indian_rat.jpg" alt="img" class="img1">
+                            <img src="images\irs.jpg" alt="img" class="img1">
                             <div class="img1-para">Indian Rat Snake</div>
                     
                            <img src="images\cobra.jpg" alt="img" class="img2">
