--- a/appt_new.html
+++ b/appt_new.html
@@ -475,7 +475,7 @@ button:hover {
                     </div>
                 </div>
                <form id="contactform" action="https://formsubmit.io/send/b13c7f50-7c75-44d9-881b-4a01e3759ac9" method="POST">
-    <input name="_redirect" type="hidden" id="name" value="https://kodeitsolution.github.io/hytech/appt_new.html">
+    <input name="_redirect" type="hidden" id="name" value="https://kodeitsolution.github.io/hytech/thank.html">
                     <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                          <!--<div class="wrapper_email_button pst_toppadder10">-->
             
