--- a/appt_new.html
+++ b/appt_new.html
@@ -310,7 +310,7 @@ button:hover {
 
 
 	<!-- message section start -->
-    <div id="choose" class="sp_choose_main_wrapper" style="background-image: url(images/bg2.jpg);">
+    <div id="choose" class="sp_choose_main_wrapper" style="background-image: url(images/bg2.jpg); background-color:lightskyblue;">
         <div class="container">
             <div style="text-align:center">
 		    <h1><b>Appointment</b></h1>
@@ -322,7 +322,7 @@ button:hover {
               </div>
               <div class="column" >
                <form id="apptform" action="https://formsubmit.io/send/b13c7f50-7c75-44d9-881b-4a01e3759ac9" method="POST">
-    <input name="_redirect" type="hidden" id="name" value="https://kodeitsolution.github.io/hytech/appt_new.html">
+    <input name="_redirect" type="hidden" id="name" value="https://kodeitsolution.github.io/hytech/thank.html">
                   <label for="fname">Full Name</label>
                   <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
                   <label for="email">Your Email</label>
