--- a/contact_us.html
+++ b/contact_us.html
@@ -387,7 +387,7 @@ We would be happy to answer your questions.</p>
 
                        
                    <form id="contactform" action="https://formsubmit.io/send/b13c7f50-7c75-44d9-881b-4a01e3759ac9" method="POST">
-    <input name="_redirect" type="hidden" id="name" value="https://kodeitsolution.github.io/hytech/contact_us.html">
+    <input name="_redirect" type="hidden" id="name" value="https://kodeitsolution.github.io/hytech/thank.html">
                                                 <div class="row">
                                                     <div class="col-md-6">
                                                         <div class="inquiry_section-pos">
