--- a/thank.html
+++ b/thank.html
@@ -75,7 +75,7 @@ button:hover {
 }
         </style>
 	<meta charset="utf-8">
-	<title>appointment</title>
+	<title>thank you</title>
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="smart pest">
     <meta name="keywords" content="pest control/smart pest/ controller/pestguard">
@@ -311,7 +311,7 @@ button:hover {
 	<!-- message section start -->
     <div class="sp_fm_contact_section" style="background-image: url(images/bg2.jpg); background-color:rgb(192, 213, 226) ;">
         <div class="container">
-         <h1> <p><font size=10px ><b><u>THANK YOU</u></b></font></p> </h1>
+         <h1> <p><font size=7px ><b><u>THANK YOU</u></b></font></p> </h1>
          <p>&nbsp;</p>
         
          <p> <h2><font size=4px >Thank you for choosing <B>Hytech Pest Control Services</B>. We appreciate your business, and we’ll do our best to continue to give you the kind of service you deserve.</font></h2></p>
