--- a/snake_control.html
+++ b/snake_control.html
@@ -117,6 +117,11 @@ button:hover {
             text-align: center;
             color: black;
         }
+	
+	.snake {
+            padding-left: 70px;
+            height: 180px;
+        }
     </style>
 	<meta charset="utf-8">
 	<title>snake control</title>
@@ -413,7 +418,9 @@ button:hover {
                         <p class="p-para">Snakes fear us more than we fear them. If we try to woo it or if it feels being threatened to save its life it may bit. Bite from non venomous snake may be treated and may cause only a rash or small injury whereas bite from any of the four venomous snakes can prove to be fatal even resulting in death if not treated in time.</p>
                         <p class="start_journey">Treatment:</p>
                         <p class="p-para">Snakes are more likely to bite when harassed. Control rodent populations to help prevent snakes from entering your property. Clean up piles of wood, trash, metal, and other debris to reduce snake habitat. Cut shrubs away from the home, keep grass short, and manage weeds to reduce hiding areas.</p>
-                
+                	 <br>
+                        <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\snake.jpg">
+                        <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\snake2.jpg" class="snake">
                     </div>
                 </div>
                 <div class="abt_page_img_rght_wrapper">
