--- a/spider_control.html
+++ b/spider_control.html
@@ -106,6 +106,11 @@ button:hover {
             text-align: center;
             color: black;
         }
+	     
+	 .spider {
+            padding-left: 70px;
+            height: 180px;
+        }
     </style>
 	<meta charset="utf-8">
 	<title>spider control</title>
@@ -401,7 +406,10 @@ button:hover {
                         <p class="p-para">While they never actively seek human contact, they will bite if they feel threatened or endangered. Their venom causes reactions that differ from species to species and person to person. Symptoms of a bite may include a stinging sensation, red mark, localized swelling or an injury requiring hospitalization. Consult your doctor if you have a concern.</p>
                         <p class="start_journey">Treatment:</p>
                         <p class="p-para">Remove some infestation sources such as clutter in the yard and crawl spaces and any ground covers against the foundational walls. Any sanitation step to remove favorable conditions is the first step in spider control. Getting rid of other insects with a routine insecticide treatment should be considered, since other insects are their food sources. </p>
-                    </div>
+                    	 <br>
+                        <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\spider1.jpg">
+                        <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\spider2.jpg" class="spider">
+			</div>
                 </div>
                 <div class="abt_page_img_rght_wrapper">
                 <div class="pc_abt_img_wrapper">
