--- a/termite_control.html
+++ b/termite_control.html
@@ -411,8 +411,8 @@ button:hover {
                         <p class="start_journey">Treatment:</p>
                         <p class="p-para">Treating to prevent termites is typically less error prone for the average homeowner than treating an active infestation. There are professional termiticides and termite bait systems available to assist with the treatment process.</p>
                        <br>
-                        <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\termite1.jpg">
-                        <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\termite2.jpg" class="termite">
+                        <img src="images\termite1.jpg">
+                        <img src="images\termite2.jpg" class="termite">
                         
                     </div>
                 </div>
