--- a/spider_control.html
+++ b/spider_control.html
@@ -407,8 +407,8 @@ button:hover {
                         <p class="start_journey">Treatment:</p>
                         <p class="p-para">Remove some infestation sources such as clutter in the yard and crawl spaces and any ground covers against the foundational walls. Any sanitation step to remove favorable conditions is the first step in spider control. Getting rid of other insects with a routine insecticide treatment should be considered, since other insects are their food sources. </p>
                     	 <br>
-                        <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\spider1.jpg">
-                        <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\spider2.jpg" class="spider">
+                        <img src="images\spider1.jpg">
+                        <img src="images\spider2.jpg" class="spider">
 			</div>
                 </div>
                 <div class="abt_page_img_rght_wrapper">
