--- a/snake_control.html
+++ b/snake_control.html
@@ -419,8 +419,8 @@ button:hover {
                         <p class="start_journey">Treatment:</p>
                         <p class="p-para">Snakes are more likely to bite when harassed. Control rodent populations to help prevent snakes from entering your property. Clean up piles of wood, trash, metal, and other debris to reduce snake habitat. Cut shrubs away from the home, keep grass short, and manage weeds to reduce hiding areas.</p>
                 	 <br>
-                        <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\snake.jpg">
-                        <img src="C:\Users\Admin\Desktop\smartpest-kodeit\smartpest\images\snake2.jpg" class="snake">
+                        <img src="images\snake.jpg">
+                        <img src="images\snake2.jpg" class="snake">
                     </div>
                 </div>
                 <div class="abt_page_img_rght_wrapper">
