--- a/coackroach_control.html
+++ b/coackroach_control.html
@@ -117,6 +117,11 @@ button:hover {
             text-align: center;
             color: black;
         }
+	     
+	.cockroach {
+            padding-left: 70px;
+            height: 200px;
+        }
     </style>
 	<meta charset="utf-8">
 	<title>cockroach control</title>
@@ -418,7 +423,9 @@ button:hover {
                         <p><br>2. For Insecticidal baits, place small spots of the bait gel should be applied in infested areas. Baits provide control over an extended period of time, less product is required and can be used in sensitive environments (e.g. kitchens, schools, etc).</p>
                         <p><br>3. For outdoor applications such as along external walls, door and window frames, and around drains, use a contact residual spray such as K-Othrine Flow or Responsar to provide fast knockdown and long-term control.</p>
                         <p class="p-para">4. For indoor infestations, use a bait Gel (e.g. Maxforce Forte) as it is discrete, highly effective, easy to apply, can eliminate colonies, and has no odour.</p>
-                        
+                        <br>
+                        <img src="images\cockroach1.jpg">
+                        <img src="images\cockroach2.jpg" class="cockroach">
                     </div>
                 </div>
                 <div class="abt_page_img_rght_wrapper">
