--- a/mosquito_control.html
+++ b/mosquito_control.html
@@ -91,7 +91,10 @@ button:hover {
             color: black;
         }
 
-       
+	.mosquito {
+            padding-left: 70px;
+            height: 180px;
+        }       
     </style>
 	<meta charset="utf-8">
 	<title>mosquito control</title>
@@ -387,7 +390,9 @@ button:hover {
                         <p class="p-para">When mosquitoes find their way inside your home through an open door or window, they usually rest in dark, hidden areas, but will come out at night in search of a blood meal. Mosquitoes can transmit several dangerous illnesses to humans, including Zika Virus. This rare disease affects pregnant women and may lead to birth defects. There are also West Nile Virus and several kinds of encephalitis. These mosquito-borne diseases may also have serious side effects. </p>
                         <p class="start_journey">Treatment:</p>
                         <p class="p-para">When mosquitoes find their way inside your home through an open door or window, they usually rest in dark, hidden areas, but will come out at night in search of a blood meal. Mosquitoes can transmit several dangerous illnesses to humans, including Zika Virus. This rare disease affects pregnant women and may lead to birth defects. There are also West Nile Virus and several kinds of encephalitis. These mosquito-borne diseases may also have serious side effects. </p>
-                       
+                        <br>
+                        <img src="images\mosquito1.jpg">
+                        <img src="images\mosquito2.jpg" class="mosquito">
                     </div>
                 </div>
                 <div class="abt_page_img_rght_wrapper">
