--- a/bedbug_control.html
+++ b/bedbug_control.html
@@ -89,6 +89,11 @@ button:hover {
             text-align: center;
             color: black;
         }
+	     
+	.bedbug {
+            padding-left: 70px;
+            height: 180px;
+        }
     </style>
 	<meta charset="utf-8">
 	<title>bedbug control</title>
@@ -386,7 +391,9 @@ button:hover {
                         <p class="start_journey">Treatment:</p>
                         <p class="p-para">Dry heat treatment is an effective method of controlling bed bugs. This treatment is only conducted by a Pest Management Professional in order to ensure that infested items and rooms reach the required temperature for effective pest control.
  </p>
-                    
+     			<br>
+                        <img src="images\bedbug1.jpg">
+                        <img src="images\bedbug2.jpg" class="bedbug">               
                     </div>
                 </div>
                 <div class="abt_page_img_rght_wrapper">
