--- a/lizard_control.html
+++ b/lizard_control.html
@@ -110,6 +110,11 @@ button:hover {
             text-align: center;
             color: black;
         }
+	     
+	.lizard {
+            padding-left: 70px;
+            height: 170px;
+        }
     </style>
 	<meta charset="utf-8">
 	<title>lizard control</title>
@@ -405,7 +410,9 @@ button:hover {
                         <p class="p-para">Even if they’re basically pest control, as they eat various insects and spiders, lizards can carry certain diseases, including salmonella, so they should really stay outside in the garden.</p>
                         <p class="start_journey">Treatment:</p>
                         <p class="p-para">Controlling lizards is easy. First you should take away their food by doing a little pest control around the house. Next you should set out some repellent granules or repellent spray and lastly, consider setting out lizard traps if they’re inside the home. </p>
-                        
+                        <br>
+                        <img src="images\lizard1.jpg">
+                        <img src="images\lizard2.jpg" class="lizard">
                     </div>
                 </div>
                 <div class="abt_page_img_rght_wrapper">
