--- a/plant_insect_control.html
+++ b/plant_insect_control.html
@@ -110,6 +110,11 @@ button:hover {
             text-align: center;
             color: black;
         }
+	    
+	.plant {
+            padding-left: 70px;
+            height: 200px;
+        }
     </style>
 	<meta charset="utf-8">
 	<title>plant insect control</title>
@@ -405,7 +410,9 @@ button:hover {
                         <p class="p-para">If you notice a plant that suddenly begins to look ill, take a closer look chancesare an insect is responsibe. Infestations can be very severe and plants that have had more than half of their leaves damaged are probably not worth saving. For this reason, it is important to identify and control indoor plant pests as quickly as possible.</p>
                         <p class="start_journey">Treatment:</p>
                         <p class="p-para">Space treatment is fogging or misting to disperse a liquid insecticide into the atmosphere within a building without evacuation or airtight sealing, allowing most work within the building to continue, at the cost of reduced penetration.</p>
-                        
+                        <br>
+                        <img src="images\plant1.jpg">
+                        <img src="images\plant2.jpg" class="plant">
                     </div>
                 </div>
                 <div class="abt_page_img_rght_wrapper">
