--- a/bedbug_control.html
+++ b/bedbug_control.html
@@ -393,7 +393,7 @@ button:hover {
  </p>
      			<br>
                         <img src="images\bedbug1.jpg">
-                        <img src="images\bedbug2.jpg" class="bedbug">               
+                        <!--<img src="images\bedbug2.jpg" class="bedbug">   -->            
                     </div>
                 </div>
                 <div class="abt_page_img_rght_wrapper">
