--- a/coackroach_control.html
+++ b/coackroach_control.html
@@ -425,7 +425,7 @@ button:hover {
                         <p class="p-para">4. For indoor infestations, use a bait Gel (e.g. Maxforce Forte) as it is discrete, highly effective, easy to apply, can eliminate colonies, and has no odour.</p>
                         <br>
                         <img src="images\cockroach1.jpg">
-                        <img src="images\cockroach2.jpg" class="cockroach">
+                        <!--<img src="images\cockroach2.jpg" class="cockroach">-->
                     </div>
                 </div>
                 <div class="abt_page_img_rght_wrapper">
