--- a/lizard_control.html
+++ b/lizard_control.html
@@ -412,7 +412,7 @@ button:hover {
                         <p class="p-para">Controlling lizards is easy. First you should take away their food by doing a little pest control around the house. Next you should set out some repellent granules or repellent spray and lastly, consider setting out lizard traps if they’re inside the home. </p>
                         <br>
                         <img src="images\lizard1.jpg">
-                        <img src="images\lizard2.jpg" class="lizard">
+                        <!--<img src="images\lizard2.jpg" class="lizard">-->
                     </div>
                 </div>
                 <div class="abt_page_img_rght_wrapper">
