--- a/plant_insect_control.html
+++ b/plant_insect_control.html
@@ -412,7 +412,7 @@ button:hover {
                         <p class="p-para">Space treatment is fogging or misting to disperse a liquid insecticide into the atmosphere within a building without evacuation or airtight sealing, allowing most work within the building to continue, at the cost of reduced penetration.</p>
                         <br>
                         <img src="images\plant1.jpg">
-                        <img src="images\plant2.jpg" class="plant">
+                        <!--<img src="images\plant2.jpg" class="plant">-->
                     </div>
                 </div>
                 <div class="abt_page_img_rght_wrapper">
