--- a/rodent_removal.html
+++ b/rodent_removal.html
@@ -427,7 +427,7 @@ button:hover {
                         <p class="p-para">The advantage of multi-dose is a significantly reduced risk of secondary poisoning of non-target species and restrict the ability of rodents to associate the bait with hazard.</p>
                         <br>
                         <img src="images\rodent1.jpg">
-                        <img src="images\rodent2.jpg" class="rodent">
+                        <!--<img src="images\rodent2.jpg" class="rodent">-->
                     </div>
                 </div>
                  <div class="abt_page_img_rght_wrapper">
