--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!--
 Template Name: smart pest
 Version: 1.0.0
@@ -47,7 +47,7 @@ button:hover {
 }
         </style>
     <meta charset="utf-8">
-    <title>Services</title>
+    <title>services</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="smart pest">
     <meta name="keywords" content="pest control/smart pest/ controller/pestguard">
@@ -112,7 +112,7 @@ button:hover {
                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                     <div class="pst_logo hidden-xs">
                         <a href="index.html">
-                             <img src="images\logo_dark.png" width="220px" alt="Logo">
+                             <img src="images\logo_dark.png" width="220px"  alt="Logo">
                         </a>
                     </div>
                 </div>
@@ -158,28 +158,27 @@ button:hover {
                                     </li>
                                     <li><a href="about_us_new.html">about us</a>
                                     </li>
-					 <li class="active"> <a href="services.html">services</a>
-                                        <ul class="dropdown-menu hovr_nav_tab">
-					<li><a href="plant_insect_control.html"> Plant Insect Control</a>
-					 </li>
+                                    <li class="active"> <a href="services.html">services</a>
+					    <ul class="dropdown-menu hovr_nav_tab">
+						<li><a href="plant_insect_control.html"> Plant Insect Control</a>
+                                            </li>
                                             <li><a href="rodent_removal.html"> Rodent Removal</a>
                                             </li>
                                             <li><a href="lizard_control.html"> Lizard Control</a>
                                             </li>
-			<li><a href="bedbug_control.html"> Bed Bug Control</a>
+						<li><a href="bedbug_control.html"> Bed Bug Control</a>
                                             </li>
                                             <li><a href="mosquito_control.html"> Mosquito Control</a>
                                             </li>
                                             <li><a href="coackroach_control.html"> Cockroach Control</a>
                                             </li>
-			<li><a href="snake_control.html"> Snake Control</a>
+						    <li><a href="snake_control.html"> Snake Control</a>
                                             </li>
                                             <li><a href="spider_control.html"> Spider Control</a>
                                             </li>
                                             <li><a href="termite_control.html"> Termite Control</a>
                                             </li>
-					 					
-                                        </ul>
+					    </ul>
                                     </li>
                                     <li> <a href="our_work_gallery_new.html">our work</a>
                                        <!-- <ul class="dropdown-menu hovr_nav_tab">
@@ -210,18 +209,18 @@ button:hover {
                                             <li><a href="gallery_4.html"> gallery IV</a>
                                             </li>
                                         </ul>
-                                    </li>-->
-                                    <!--<li> <a href="blog_new.html">blog</a>
-                                        <ul class="dropdown-menu hovr_nav_tab">
+                                    </li>
+                                    <li> <a href="blog_new.html">blog</a>-->
+                                        <!--<ul class="dropdown-menu hovr_nav_tab">
                                             <li><a href="blog_single.html">blog single</a>
                                             </li>
                                             <li><a href="blog_category.html">blog category</a>
                                             </li>
-                                        </ul>
-                                    </li>-->
+                                        </ul>-->
+                                    </li>
                                     <li> <a href="contact_us.html">contact us</a>
                                     </li>
-					<li> <a href="appt_new.html">book appointment</a>
+					 <li> <a href="appt_new.html">book appointment</a>
                                     </li>
                                 </ul>
                             </div>
@@ -265,31 +264,30 @@ button:hover {
 
                                         <li> <a href="index.html">home</a>
                                         </li>
-                                        <li ><a href="about_us_new.html">about us</a>
+                                        <li><a href="about_us_new.html">about us</a>
                                         </li>
-                                        <li class="active"> <a href="services.html">services</a>
-                                        <ul class="dropdown-menu hovr_nav_tab">
-					<li><a href="plant_insect_control.html"> Plant Insect Control</a>
-					 </li>
+                                       <li class="active"> <a href="services.html">services</a>
+						<ul class="dropdown-menu hovr_nav_tab">
+						<li><a href="plant_insect_control.html"> Plant Insect Control</a>
+                                            </li>
                                             <li><a href="rodent_removal.html"> Rodent Removal</a>
                                             </li>
                                             <li><a href="lizard_control.html"> Lizard Control</a>
                                             </li>
-			<li><a href="bedbug_control.html"> Bed Bug Control</a>
+						<li><a href="bedbug_control.html"> Bed Bug Control</a>
                                             </li>
                                             <li><a href="mosquito_control.html"> Mosquito Control</a>
                                             </li>
                                             <li><a href="coackroach_control.html"> Cockroach Control</a>
                                             </li>
-			<li><a href="snake_control.html"> Snake Control</a>
+						    <li><a href="snake_control.html"> Snake Control</a>
                                             </li>
                                             <li><a href="spider_control.html"> Spider Control</a>
                                             </li>
                                             <li><a href="termite_control.html"> Termite Control</a>
                                             </li>
-					 					
-                                        </ul>
-                                    </li>
+					    </ul>
+                                        </li>
                                         <li> <a href="our_work_gallery_new.html">our work</a>
                                             <!--<ul>
                                             <li><a href="gallery_2.html"> gallery II</a>
@@ -301,15 +299,15 @@ button:hover {
                                             </ul>
                                         </li>
                                         <li><a href="team.html">our team</a>
-                                        </li>-->
-                                        <!--<li> <a href="blog_new.html">blog</a>
-                                            <ul class="dropdown-menu hovr_nav_tab">
+                                        </li>
+                                        <li> <a href="blog_new.html">blog</a>-->
+                                            <!--<ul class="dropdown-menu hovr_nav_tab">
                                                 <li><a href="blog_single.html">blog single</a>
                                                 </li>
                                                 <li><a href="blog_category.html">blog category</a>
                                                 </li>
-                                            </ul>
-                                        </li>-->
+                                            </ul>-->
+                                        </li>
                                         <li> <a href="contact_us.html">contact us</a>
                                         </li>
 					    <li> <a href="appt_new.html">book appointment</a>
@@ -319,14 +317,13 @@ button:hover {
                             </div>
                         </div>
                     </div>
-                    <!--<div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                 <!--   <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
                         <div class="appointmnt_wrapper hidden-xs hidden-sm">
                             <ul>
                                 <li>
                                     <a href="appt_new.html" class="appint-btn hidden-xs hidden-sm">
                                         <div class="btn-front"><i class="fa fa-calendar"></i>Appointment</div>
                                         <div class="btn-back"><i class="fa fa-calendar"></i>Appointment</div>
-
                                     </a>
                                 </li>
                             </ul>
@@ -346,7 +343,7 @@ button:hover {
                     <!-- section_heading start -->
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
                         <div class="page_header_line">
-                            <h1 class="pst_bottompadder30"><span>services</span></h1>
+                            <h1 class="pst_bottompadder30"><span>about us</span></h1>
                         </div>
                     </div>
                 </div>
