--- a/appt_new.html
+++ b/appt_new.html
@@ -194,9 +194,9 @@ button:hover {
                                  
                                    <!--<li><a href="team.html">our team</a>
                                     </li>-->
-                                    <li class="active"> <a href="contact_us.html">contact us</a>
+                                     <li><a href="contact_us.html">contact us</a>
                                     </li>
-					 <li> <a href="appt_new.html">book appointment</a>
+					<li class="active"> <a href="appt_new.html">book appointment</a>
                                     </li>
                                 </ul>
                                    
@@ -253,7 +253,7 @@ button:hover {
                                         </li>-->
                                         <li> <a href="contact_us.html">contact us</a>
                                         </li>
-					     <li> <a href="appt_new.html">book appointment</a>
+					<li class="active"><a href="appt_new.html">book appointment</a>
                                     </li>
                                         </ul>
                                 </div>
