--- a/our_work_gallery_new.html
+++ b/our_work_gallery_new.html
@@ -247,11 +247,11 @@ button:hover {
                                         </li>
                                         <li><a href="about_us_new.html">about us</a>
                                         </li>
-                                         <li class="active"><a href="services.html">services</a>
+                                         <li><a href="services.html">services</a>
 						
                                         </li>
 
-                                        <li><a href='our_work_gallery_new.html'>our work</a>
+                                        <li class="active"><a href='our_work_gallery_new.html'>our work</a>
                                             <!--<ul>
                                             <li><a href="gallery_2.html"> gallery II</a>
                                             </li>
