--- a/services.html
+++ b/services.html
@@ -424,7 +424,7 @@ button:hover {
                             <div class="rotate rotate_1">
                                 <i class="flaticon-insect"></i>
                             </div>
-                            <h4 class="text-center pst_bottompadder10">Cockroach Control</a></h4>
+                            <h4 class="text-center pst_bottompadder10"><a href="coakroach_control.html">Cockroach Control</a></h4>
                             <p class="text-center">Sprays and the most familiar chemicals like boric acid and diatomaceous earth are used alongwith chemical powders to get rid of the coackroaches.</p>
                             <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
@@ -434,7 +434,7 @@ button:hover {
                             <div class="rotate rotate_1">
                                 <i class="flaticon-mosquito-1"></i>
                             </div>
-                            <h4 class="text-center pst_bottompadder10">Plant Insect Control</a></h4>
+                            <h4 class="text-center pst_bottompadder10"><a href="plant_insect_control.html">Plant Insect Control</a></h4>
                             <p class="text-center">Safer Wasp & Hornet Killer sprays are directly fed into the nest opening. We take atmost care as swarm attacks take place during this operation.</p>
                           <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
@@ -444,7 +444,7 @@ button:hover {
                             <div class="rotate rotate_1">
                                 <i class="flaticon-butterfly-with-a-heart-on-frontal-wing-on-side-view"></i>
                             </div>
-                            <h4 class="text-center pst_bottompadder10">Fly Control</a></h4>
+                            <h4 class="text-center pst_bottompadder10"><a href="spider_control.html">Spider Control</a></h4>
                             <p class="text-center">Sanitation is the most effective and important step in reducing the number of flies and also eliminating the breeding areas with the help of the insecticides.</p>
                            <!-- <h3><a href="#">Read More </a></h3>-->
                         </div>
@@ -454,7 +454,7 @@ button:hover {
                             <div class="rotate rotate_1">
                                 <i class="flaticon-mouse"></i>
                             </div>
-                            <h4 class="text-center pst_bottompadder10">Rodent Removal</a></h4>
+                            <h4 class="text-center pst_bottompadder10"><a href"rodent_removal.html">Rodent Removal</a></h4>
                             <p class="text-center">Learn facts about rodents, identification tips, damage, and choose the best solution for your home or business. We offer a variety of rodent removal services.</p>
                             <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
@@ -464,7 +464,7 @@ button:hover {
                             <div class="rotate rotate_1">
                                 <i class="flaticon-mosquito-insect-side-view"></i>
                             </div>
-                            <h4 class="text-center pst_bottompadder10">Mosquito Control</a></h4>
+                            <h4 class="text-center pst_bottompadder10"><a href="mosquito_control.html">Mosquito Control</a></h4>
                             <p class="text-center">To get rid of adult mosquitoes,we spray the foliage of bushes and shrubs, lower limbs of shade trees, tall grass, and shaded areas with a residual insecticide.</p>
                             <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
@@ -474,7 +474,7 @@ button:hover {
                             <div class="rotate rotate_1">
                                 <i class="flaticon-bug"></i>
                             </div>
-                            <h4 class="text-center pst_bottompadder10">Bedbug Control</a></h4>
+                            <h4 class="text-center pst_bottompadder10"><a href="bedbug_control.html>Bedbug Control</a></h4>
                             <p class="text-center">In order to get rid of the bedbugs we use an Insecticide Aerosol such as CB-80 or PT 565 to flush the bed bugs out of suspected hiding places.</p>
                             <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
