--- a/services.html
+++ b/services.html
@@ -454,7 +454,7 @@ button:hover {
                             <div class="rotate rotate_1">
                                 <i class="flaticon-mouse"></i>
                             </div>
-                            <h4 class="text-center pst_bottompadder10"><a href"rodent_removal.html">Rodent Removal</a></h4>
+                            <h4 class="text-center pst_bottompadder10"><a href="rodent_removal.html">Rodent Removal</a></h4>
                             <p class="text-center">Learn facts about rodents, identification tips, damage, and choose the best solution for your home or business. We offer a variety of rodent removal services.</p>
                             <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
@@ -474,7 +474,7 @@ button:hover {
                             <div class="rotate rotate_1">
                                 <i class="flaticon-bug"></i>
                             </div>
-                            <h4 class="text-center pst_bottompadder10"><a href="bedbug_control.html>Bedbug Control</a></h4>
+                            <h4 class="text-center pst_bottompadder10"><a href="bedbug_control.html">Bedbug Control</a></h4>
                             <p class="text-center">In order to get rid of the bedbugs we use an Insecticide Aerosol such as CB-80 or PT 565 to flush the bed bugs out of suspected hiding places.</p>
                             <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
