--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Purchase:
 
 <head>
     <meta charset="utf-8">
-    <title>Smart pest control-HTML Template</title>
+    <title>Hytech Pest Control Services</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="smart pest">
     <meta name="keywords" content="pest control/smart pest/ controller/pestguard">
@@ -1628,7 +1628,7 @@ Purchase:
             <div class="row">
                 <div class="col-lg-10 col-md-10 col-xs-10 col-sm-10">
                     <div class="section3_copyright">
-                        <p>Copyright 2018 <a href="index1.html">  HyTech Pest Control </a>. all right reserved - design by <a href="index1.html">KodeIT Solutions</a></p>
+                        <p>Copyright 2020 <a href="index1.html">  HyTech Pest Control </a>. all right reserved - design by <a href="index1.html">Kode IT Solutions</a></p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-2 col-xs-2 col-sm-2">
