--- a/appt_new.html
+++ b/appt_new.html
@@ -615,7 +615,7 @@ button:hover {
                                     <img src="images\foter_blog_1.png" class="img-responsive" alt="blog-img1_img">
                                 </div>
                                 <div class="ft_blog_text">
-                                    <h5><a href="contact_us.html">Free Sanitization Spray for the frontline warriors</a></h5>
+                                    <h5>Free Sanitization Spray for the frontline warriors</a></h5>
                                     <div class="ft_blog_date">May 15, 2020</div>
                                 </div>
                             </div>
@@ -665,7 +665,7 @@ button:hover {
             <div class="row">
                 <div class="col-lg-10 col-md-10 col-xs-10 col-sm-10">
                     <div class="section3_copyright">
-                        <p>Copyright 2018 <a href="index.html">  HyTech Pest Control </a>. all right reserved - design by <a href="index.html">KodeIt Solution</a></p>
+                        <p>Copyright 2020 <a href="index.html">  HyTech Pest Control </a>. all right reserved - design by <a href="https://kodeitsolutions.com/">Kode It Solution</a></p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-2 col-xs-2 col-sm-2">
