--- a/our_work_gallery_new.html
+++ b/our_work_gallery_new.html
@@ -852,7 +852,7 @@ button:hover {
                     <div class="col-lg-3 col-md-3 col-xs-12 col-sm-6">
                         <div class="wrapper_second_about">
                             <div class="wrapper_first_image pst_bottompadder40">
-                                <a href="index1.html"><img src="images\foter_logo.png"  class="img-responsive" alt="logo"></a>
+                                <a href="index.html"><img src="images\foter_logo.png"  class="img-responsive" alt="logo"></a>
                             </div>
                             <div class="abotus_content">
                                 <p>For over 10 years, we have taken pest control seriously, and have thousands of satisfied customers to prove it.</p>
@@ -901,7 +901,7 @@ button:hover {
                                     <img src="images\foter_blog_1.png" class="img-responsive" alt="blog-img1_img">
                                 </div>
                                 <div class="ft_blog_text">
-                                    <h5><a href="contact_us.html">Free Sanitization Spray for the frontline warriors</a></h5>
+                                    <h5>Free Sanitization Spray for the frontline warriors</a></h5>
                                     <div class="ft_blog_date">May 15, 2020</div>
                                 </div>
                             </div>
@@ -951,8 +951,7 @@ button:hover {
             <div class="row">
                 <div class="col-lg-10 col-md-10 col-xs-10 col-sm-10">
                     <div class="section3_copyright">
-                        <p>Copyright 2018 <a href="index.html">  HyTech Pest Control </a>. all right reserved - design by <a href="index.html">KodeIT Solutions</a></p>
-                    </div>
+                       <p>Copyright 2020 <a href="index.html">  HyTech Pest Control </a>. all right reserved - design by <a href="https://kodeitsolutions.com/">Kode It Solution</a></p>
                 </div>
                 <div class="col-lg-2 col-md-2 col-xs-2 col-sm-2">
                     <div class="close_wrapper">
