--- a/services.html
+++ b/services.html
@@ -424,7 +424,7 @@ button:hover {
                             <div class="rotate rotate_1">
                                 <i class="flaticon-insect"></i>
                             </div>
-                            <h4 class="text-center pst_bottompadder10"><a href="coakroach_control.html">Cockroach Control</a></h4>
+                            <h4 class="text-center pst_bottompadder10"><a href="coackroach_control.html">Cockroach Control</a></h4>
                             <p class="text-center">Sprays and the most familiar chemicals like boric acid and diatomaceous earth are used alongwith chemical powders to get rid of the coackroaches.</p>
                             <!--<h3><a href="#">Read More </a></h3>-->
                         </div>
@@ -835,7 +835,7 @@ button:hover {
                                     <img src="images\foter_blog_1.png" class="img-responsive" alt="blog-img1_img">
                                 </div>
                                 <div class="ft_blog_text">
-                                    <h5><a href="contact_us.html">Free Sanitization Spray for the frontline warriors</a></h5>
+                                    <h5>Free Sanitization Spray for the frontline warriors</a></h5>
                                     <div class="ft_blog_date">May 15, 2020</div>
                                 </div>
                             </div>
@@ -885,7 +885,7 @@ button:hover {
             <div class="row">
                 <div class="col-lg-10 col-md-10 col-xs-10 col-sm-10">
                     <div class="section3_copyright">
-                        <p>Copyright 2018 <a href="index.html">  HyTech Pest Control </a>. all right reserved - design by <a href="index.html">kodeIT Solutions</a></p>
+                        <p>Copyright 2020 <a href="index.html">  HyTech Pest Control </a>. all right reserved - design by <a href="https://kodeitsolutions.com/">kode IT Solutions</a></p>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-2 col-xs-2 col-sm-2">
