--- a/about_us_new.html
+++ b/about_us_new.html
@@ -336,14 +336,10 @@ button:hover {
     </div>
     <!--top header end-->
     <!-- page_title_section start -->
-    <div class="page_title_section">
+     <div class="page_title_section">
         <div class="page_title_overlay"></div>
-      <div class="container">
-            <div id="search_open" class="gc_search_box">
-                <input type="text" placeholder="Search here">
-                <button><i class="flaticon-magnifier"></i></button>
-            </div>
-	       <div class="menu_wrapper_mn">
+        <div class="page_header text-center">
+            <div class="container">
                 <div class="row">
                     <!-- section_heading start -->
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
